force-app/main/default/objects/Reference_Client_Retention__c/Reference_Client_Retention__c.object-meta.xml
<CustomObject>
    <description>Reference object used for Ernst &amp; Young</description>
    <label>Reference Client Retention</label>
    <nameField>
        <displayFormat>Ref Clt Retention-{000000}</displayFormat>
        <label>Reference Client Retention Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Client Retentions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>