force-app/main/default/objects/Reference_Client_Retention__c/fields/ASO_HR_Professional_Name__c.field-meta.xml
<CustomField>
    <fullName>ASO_HR_Professional_Name__c</fullName>
    <description>Fed in from Client Retention file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ASO HR Professional Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>