force-app/main/default/objects/Reference_Client_Retention__c/fields/Branch_ID__c.field-meta.xml
<CustomField>
    <fullName>Branch_ID__c</fullName>
    <description>Fed in from Client Retention file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>