force-app/main/default/objects/Reference_Client_Retention__c/fields/CAID__c.field-meta.xml
<CustomField>
    <fullName>CAID__c</fullName>
    <description>Fed in from Client Retention file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CAID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>