force-app/main/default/objects/Reference_Client_Retention__c/fields/Client_Experience_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Client_Experience_Feedback__c</fullName>
    <description>Fed in from Client Retention file</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Would you like to share more details about your experience as a company client over the last year? If so, please tell us about...</inlineHelpText>
    <label>Client Experience Feedback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>