force-app/main/default/objects/Reference_Client_Retention__c/fields/Continue_Business_with_Us__c.field-meta.xml
<CustomField>
    <fullName>Continue_Business_with_Us__c</fullName>
    <description>Fed in from Client Retention file</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Is your organization planning on continuing to do business with us in their next budget cycle?</inlineHelpText>
    <label>Continue Business with Us</label>
    <length>255</length>
    <type>Text</type>
</CustomField>