force-app/main/default/objects/Reference_Client_Retention__c/fields/Field_Contact_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Field_Contact_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Contact Assigned</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reference Client Retentions</relationshipLabel>
    <relationshipName>Reference_Client_Retentions</relationshipName>
    <type>Lookup</type>
</CustomField>