force-app/main/default/objects/Reference_Client_Retention__c/fields/Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Lost_Date__c</fullName>
    <description>Fed in from Client Retention file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lost Date</label>
    <type>DateTime</type>
</CustomField>