force-app/main/default/objects/Reference_Client_Retention__c/fields/PC_Name__c.field-meta.xml
<CustomField>
    <fullName>PC_Name__c</fullName>
    <description>This is only used to create a searchable field, so CRT can global search on account name to see if other refObj exists.

Should NOT be on any page layout</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is only used to create a searchable field, so CRT can global search on account name to see if other refObj exists.

Should NOT be on any page layout</inlineHelpText>
    <label>PC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>