force-app/main/default/objects/Reference_Client_Retention__c/fields/Prospect_Client_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Client_Lost_Date__c</fullName>
    <formula>Prospect_Client_Name__r.Lost_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect-Client Lost Date</label>
    <type>Date</type>
</CustomField>