force-app/main/default/objects/Reference_Client_Retention__c/fields/Prospect_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect-Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reference Client Retentions</relationshipLabel>
    <relationshipName>Reference_Client_Retentions</relationshipName>
    <type>Lookup</type>
</CustomField>