force-app/main/default/objects/Reference_Client_Retention__c/fields/Salesforce_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Record_ID__c</fullName>
    <description>Fed in from Client Retention file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Salesforce Record ID (Account)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>