force-app/main/default/objects/Reference_Client_Retention__c/fields/Voice_Analytics_1__c.field-meta.xml
<CustomField>
    <fullName>Voice_Analytics_1__c</fullName>
    <description>Fed in from Client Retention file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Voice Analytics 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>