force-app/main/default/objects/Reference_Client_Retention__c/recordTypes/Client_Retention_Email_Analytics.recordType-meta.xml
<RecordType>
    <fullName>Client_Retention_Email_Analytics</fullName>
    <active>true</active>
    <label>Client Retention - Email Analytics</label>
</RecordType>