force-app/main/default/objects/Reference_Client_Retention__c/recordTypes/Client_Retention_Resolution_Team.recordType-meta.xml
<RecordType>
    <fullName>Client_Retention_Resolution_Team</fullName>
    <active>true</active>
    <label>Client Retention - Resolution Team</label>
</RecordType>