force-app/main/default/objects/Reference_Client_Retention__c/recordTypes/Reference_Client_Retention.recordType-meta.xml
<RecordType>
    <fullName>Reference_Client_Retention</fullName>
    <active>true</active>
    <label>Reference Client Retention</label>
</RecordType>