force-app/main/default/objects/Reference_Client_Retention__c/validationRules/Retention_Notes_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Retention_Notes_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(BEGINS($Profile.Name,&apos;System Admin&apos;)),
ISCHANGED(Current_Step__c),
ISPICKVAL(Current_Step__c,&apos;Transfer to Resolution Team&apos;),
ISBLANK(Retention_Notes__c)
)</errorConditionFormula>
    <errorMessage>You must populate the Retention Notes field before Transferring to Resolution Team.</errorMessage>
</ValidationRule>