force-app/main/default/objects/Reference_Client_Retention__c/listViews/Change_Owner_List_View.listView-meta.xml
<ListView>
    <fullName>Change_Owner_List_View</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Case_Type__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Prospect_Client_Number__c</columns>
    <columns>Prospect_Client_Contact__c</columns>
    <columns>Current_Step__c</columns>
    <columns>Case__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reference_Client_Retention__c.Reference_Client_Retention</value>
    </filters>
    <filters>
        <field>Current_Step__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>Case_Type__c</field>
        <operation>equals</operation>
        <value>Phase 2 Retention</value>
    </filters>
    <label>Change Owner List View</label>
    <sharedTo>
        <role>Client_Retention_Supervisor</role>
        <role>Dedicated_Service_Center_Manager</role>
    </sharedTo>
</ListView>