force-app/main/default/objects/Reference_Client_Retention__c/listViews/Cheryl_Solution_By_day.listView-meta.xml
<ListView>
    <fullName>Cheryl_Solution_By_day</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Case_Type__c</columns>
    <columns>Branch_Client_Number__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Prospect_Client_Number__c</columns>
    <columns>Prospect_Client_Contact__c</columns>
    <columns>Current_Step__c</columns>
    <columns>Transfer_to_Resolution_Date__c</columns>
    <columns>Additional_Feedback__c</columns>
    <columns>Case__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reference_Client_Retention__c.Client_Retention_Email_Analytics</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Chaudry</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>6/10/2024 12:00 AM</value>
    </filters>
    <label>Cheryl Solution By day</label>
</ListView>