force-app/main/default/objects/Reference_Client_Retention__c/listViews/Client_Retention_Exception_Reference_Client_Retention.listView-meta.xml
<ListView>
    <fullName>Client_Retention_Exception_Reference_Client_Retention</fullName>
    <columns>NAME</columns>
    <columns>Client_ID__c</columns>
    <columns>Prospect_Client_Number__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case__c</columns>
    <columns>BIS_ID__c</columns>
    <columns>BISID__c</columns>
    <columns>Branch_Client_Number__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Client Retention Exception</label>
    <queue>Client_Retention_Exception</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>