force-app/main/default/objects/Reference_Client_Retention__c/listViews/Client_Retention_Resolution_Team_Reference_Client_Retention.listView-meta.xml
<ListView>
    <fullName>Client_Retention_Resolution_Team_Reference_Client_Retention</fullName>
    <columns>NAME</columns>
    <columns>Branch_Client_Number__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Case_Type__c</columns>
    <columns>Case_Severity__c</columns>
    <columns>Primary_Concern_Type_1__c</columns>
    <columns>Case__c</columns>
    <filterScope>Everything</filterScope>
    <label>Client Retention Resolution Team</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>