force-app/main/default/objects/Reference_Client_Retention__c/listViews/Copy_of_Open_cases.listView-meta.xml
<ListView>
    <fullName>Copy_of_Open_cases</fullName>
    <columns>Date_for_Follow_Up__c</columns>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Branch_Client_Number__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Prospect_Client_Contact__c</columns>
    <columns>Current_Step__c</columns>
    <columns>Hours_of_work_involved_for_project_fix__c</columns>
    <columns>Case__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Activity_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Step__c</field>
        <operation>equals</operation>
        <value>First Attempt made,Second Attempt made,Connected with client - In Progress,Meeting Scheduled,Solution team working on Resolution,Leadership Email sent,New,Sent to 2nd Level Support Team</value>
    </filters>
    <filters>
        <field>Case_Type__c</field>
        <operation>equals</operation>
        <value>Email Analytics</value>
    </filters>
    <label>Solution Team Open cases- CSS view</label>
</ListView>