force-app/main/default/objects/Reference_Client_Retention__c/listViews/Daily_Count_Info4.listView-meta.xml
<ListView>
    <fullName>Daily_Count_Info4</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Case_Type__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Prospect_Client_Number__c</columns>
    <columns>Prospect_Client_Contact__c</columns>
    <columns>Current_Step__c</columns>
    <columns>Additional_Feedback__c</columns>
    <columns>Case__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Type__c</field>
        <operation>equals</operation>
        <value>Loyalty,Oliver,Oliver P2,Phase 2 Retention,Voice Analytics,GPT</value>
    </filters>
    <filters>
        <field>Current_Step__c</field>
        <operation>equals</operation>
        <value>First Attempt made,Second Attempt made,Connected with client - In Progress,Triage working on Resolution,New</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>contains</operation>
        <value>bing</value>
    </filters>
    <label>Daily Count Info</label>
</ListView>