force-app/main/default/objects/Reference_Client_Retention__c/listViews/Field_Resolution_Pending.listView-meta.xml
<ListView>
    <fullName>Field_Resolution_Pending</fullName>
    <columns>NAME</columns>
    <columns>Branch_Client_Number__c</columns>
    <columns>Case_Severity__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Contact_Email__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Contact_Phone_Number__c</columns>
    <columns>Current_Step__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Current_Step__c</field>
        <operation>equals</operation>
        <value>Referred to field for Resolution,Sent second reminder to Field for Resolution,Field Working on Resolution</value>
    </filters>
    <label>Field Resolution Pending</label>
    <sharedTo>
        <role>Client_Retention_Specialist</role>
    </sharedTo>
</ListView>