force-app/main/default/objects/Reference_Client_Retention__c/listViews/First_Attempts.listView-meta.xml
<ListView>
    <fullName>First_Attempts</fullName>
    <columns>Date_for_Follow_Up__c</columns>
    <columns>NAME</columns>
    <columns>Branch_Client_Number__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Contact_Phone_Number__c</columns>
    <columns>Total_Annual_Revenue__c</columns>
    <columns>Current_Step__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case_Type__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Current_Step__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>First Attempts</label>
    <sharedTo>
        <role>Client_Retention_Specialist</role>
        <roleAndSubordinatesInternal>Client_Retention_Specialist</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Client_Retention_Supervisor</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>