force-app/main/default/objects/Reference_Client_Retention__c/listViews/Follow_up_Due_Today.listView-meta.xml
<ListView>
    <fullName>Follow_up_Due_Today</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Case_Type__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Prospect_Client_Number__c</columns>
    <columns>Prospect_Client_Contact__c</columns>
    <columns>Current_Step__c</columns>
    <columns>Case__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Activity_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Case_Type__c</field>
        <operation>equals</operation>
        <value>Email Analytics</value>
    </filters>
    <filters>
        <field>Current_Step__c</field>
        <operation>equals</operation>
        <value>First Attempt made,Second Attempt made,Connected with client - In Progress,Meeting Scheduled,Solution team working on Resolution,Leadership Email sent,New</value>
    </filters>
    <filters>
        <field>Activity_Date__c</field>
        <operation>equals</operation>
        <value>9/1/2023 12:00 AM</value>
    </filters>
    <label>Follow up Due Today</label>
    <sharedTo>
        <role>Client_Retention_Specialist</role>
    </sharedTo>
</ListView>