force-app/main/default/objects/Reference_Client_Retention__c/listViews/James_B_Triage_Open_cases.listView-meta.xml
<ListView>
    <fullName>James_B_Triage_Open_cases</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Case_Type__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Prospect_Client_Number__c</columns>
    <columns>Prospect_Client_Contact__c</columns>
    <columns>Current_Step__c</columns>
    <columns>Case__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Step__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>Case_Type__c</field>
        <operation>equals</operation>
        <value>Loyalty,Oliver,Oliver P2,Phase 2 Retention,Voice Analytics,GPT</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Brooks</value>
    </filters>
    <label>James B Triage Open cases</label>
</ListView>