force-app/main/default/objects/Reference_Client_Retention__c/listViews/My_Closed_Cases.listView-meta.xml
<ListView>
    <fullName>My_Closed_Cases</fullName>
    <columns>NAME</columns>
    <columns>Current_Step__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Branch_Client_Number__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Step__c</field>
        <operation>equals</operation>
        <value>Client Unresponsive,Field Resolved,CRT Resolved</value>
    </filters>
    <label>My Closed Cases</label>
    <sharedTo>
        <role>Client_Retention_Supervisor</role>
    </sharedTo>
</ListView>