force-app/main/default/objects/Reference_Client_Retention__c/listViews/Phase_2_Retention.listView-meta.xml
<ListView>
    <fullName>Phase_2_Retention</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Case_Type__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Prospect_Client_Number__c</columns>
    <columns>Prospect_Client_Contact__c</columns>
    <columns>Current_Step__c</columns>
    <columns>Additional_Feedback__c</columns>
    <columns>Case__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Type__c</field>
        <operation>equals</operation>
        <value>Oliver,Oliver P2,Phase 2 Retention</value>
    </filters>
    <filters>
        <field>Current_Step__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Phase 2 Retention</label>
</ListView>